--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="contenido-festival">
             <h2>Rock & EDM Festival</h2>
             <p class="fecha">31 de Julio. San Juan, Argentina</p>
-            <p>Este es el tema del hitazo del verano el que vas a cantar y
-            bailar en todos lados, el que en una parte dice punchi punchi
-            punchi, y se te pega y se te pega y se te pega y nunca despega</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget ante in purus rutrum ornare nec in purus. In sed odio ac velit dignissim facilisis. Nunc non volutpat lacus. Pellentesque ac lorem pretium, bibendum leo sit amet, pulvinar orci. Donec accumsan, justo nec varius egestas, nulla ligula consequat nunc, eget consequat nisi sem et augue. Cras eu venenatis quam. Etiam laoreet justo in lobortis iaculis. In dictum tortor porta dignissim maximus. Duis non enim condimentum, varius metus eu, pellentesque elit. Sed pellentesque, diam eget lobortis semper, metus justo feugiat odio, id malesuada mauris diam at odio. Nunc feugiat elit elementum lectus tincidunt porttitor. Duis malesuada quam augue.
+
+</p>
         </div>
     </section>
 
